load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_prefix")

gazelle(
    name = "gazelle",
    args = [
        "-build_file_name",
        "BUILD,BUILD.bazel",
    ],
    command = "fix",
    prefix = "github.com/stackb/fortune-teller",
)

go_prefix(
    prefix = "github.com/stackb/fortune-teller",
)
