load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "fortune_proto",
    srcs = ["fortune.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "fortune_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    #importpath = "github.com/stackb/fortune-teller/proto/fortune",
    proto = ":fortune_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":build_stack_fortune_go_proto"],
    importpath = "github.com/stackb/fortune-teller/proto/fortune",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "build_stack_fortune_proto",
    srcs = ["fortune.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "build_stack_fortune_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/stackb/fortune-teller/proto/fortune",
    proto = ":build_stack_fortune_proto",
    visibility = ["//visibility:public"],
)
